# laboratorio-algoritmi-2021-2022

./: README.md
Java/ExJava/src/Ex3/: HeapTests.java  Main.java  MinHeap.java  MinHeapException.java
Java/ExJava/src/Ex4/graph/: Dijkstra.java  Edge.java  EdgeComparator.java  Graph.java  GraphException.java  GraphTest.java  Node.java
Java/ExJava/src/Ex4/graphusage/: GraphUsage.java
Java/Exercise3/src/: Main.java  MinHeap.java
Resources/: pippo.h
Resources/C/Exercise1/: CMakeLists.txt  Makefile
Resources/C/Exercise1/files/: piccolo.csv
Resources/C/Exercise1/src/: binaryInsertionSort.c  link.h  main.c  orderedArray.c  orderedArray.h  ordered_array.c  ordered_array.h  sorting.c  sorting.h  test.c  testOrderedArray.c  test_ordered_array.c
Resources/C/Exercise2/: Makefile  README.md
Resources/C/Exercise2/src/: main.c  skip_list.c  skip_list.h  test.c  utils.c  utils.h
